@@ -1,15 +1,15 @@
-# This file was generated by Rcpp::compileAttributes
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+colNorm <- function(G) {
+    .Call('_RcppGSLExample_colNorm', PACKAGE = 'RcppGSLExample', G)
+}
+
 colNorm_old2 <- function(M) {
-    .Call('RcppGSLExample_colNorm_old2', PACKAGE = 'RcppGSLExample', M)
+    .Call('_RcppGSLExample_colNorm_old2', PACKAGE = 'RcppGSLExample', M)
 }
 
 colNorm_old3 <- function(G) {
-    .Call('RcppGSLExample_colNorm_old3', PACKAGE = 'RcppGSLExample', G)
-}
-
-colNorm <- function(G) {
-    .Call('RcppGSLExample_colNorm', PACKAGE = 'RcppGSLExample', G)
+    .Call('_RcppGSLExample_colNorm_old3', PACKAGE = 'RcppGSLExample', G)
 }
 
